--- a/pizza/src/App.css
+++ b/pizza/src/App.css
@@ -1,38 +1,20 @@
+@import url('https://fonts.googleapis.com/css2?family=Nerko+One&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Nerko+One&family=Open+Sans:ital,wght@1,300&display=swap');
+
 .App {
   text-align: center;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+header{
+  /* border: 1px solid red; */
+  font-family: 'Nerko One', cursive;
+  font-size: 75px;
+  text-align: center;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+h3{
+  /* border: 1px solid red; */
+  font-family: 'Open Sans', sans-serif;
+  font-size: 22px;
+  text-align: center;
+  margin: 0px;
+  margin-bottom: 25px;
 }
