--- a/pizza/src/css/PizzaForm.css
+++ b/pizza/src/css/PizzaForm.css
@@ -1,5 +1,6 @@
 .cheesePizza{
     /* border: 1px solid red; */
+    position: relative;
     display: block;
     margin-left: auto;
     margin-right: auto;
@@ -27,8 +28,8 @@
   }
  .inputBox{
     text-align: center;
-    margin:0 auto; /* centers button */
-    display:block; /* centers button */
+    margin: 0 auto; /* centers button */
+    display: block; /* centers button */
  }
 
   .zoom{
