--- a/pizza/src/css/animations/BasilAnimation.css
+++ b/pizza/src/css/animations/BasilAnimation.css
@@ -1,31 +1,11 @@
 /* Is it better to generate a random number based on the pizza range? */
 #basil_1 {
-  position: absolute;
   opacity: 1;
-  top: 350px;
-  left: 300px;
+  top: 10%;
+  left: 50%;
+  /* z-index: 10; */
 }
-#basil_2 {
-  position: absolute;
-  opacity: 1;
-  top: 350px;
-  left: 500px;
-}
-#basil_3 {
-  position: absolute;
-  opacity: 1;
-  top: 550px;
-  left: 450px;
-}
-#basil_4 {
-  position: absolute;
-  opacity: 1;
-  top: 670px;
-  left: 600px;
-}
-#basil_5 {
-  position: absolute;
-  opacity: 1;
-  top: 720px;
-  left: 300px;
-}
+
+
+/* top limits : 40-100% */
+/* left limits: 37%-60% */
