--- a/pizza/src/css/animations/BasilAnimation.css
+++ b/pizza/src/css/animations/BasilAnimation.css
@@ -1,11 +1,34 @@
-/* Is it better to generate a random number based on the pizza range? */
 #basil_1 {
+  position: absolute;
+  opacity: 1;
+  top: 73%;
+  left: 34%;
+}
+#basil_2 {
+  position: absolute;
+  opacity: 1;
+  top: 23%;
+  left: 28%;
+}
+#basil_3 {
+  position: absolute;
+  opacity: 1;
+  top: 64%;
+  left: 55%;
+}
+#basil_4 {
+  position: absolute;
+  opacity: 1;
+  top: 45%;
+  left: 46%;
+}
+#basil_5 {
+  position: absolute;
   opacity: 1;
   top: 10%;
-  left: 50%;
-  /* z-index: 10; */
+  left: 51%;
 }
 
-
-/* top limits : 40-100% */
-/* left limits: 37%-60% */
+/* Is it better to generate a random number based on the pizza range? */
+/* side limits (Left) 25%-65% */
+/* top limit 10-80 */
