--- a/pizza/src/css/animations/BlackOliveAnimation.css
+++ b/pizza/src/css/animations/BlackOliveAnimation.css
@@ -1,30 +1,34 @@
 #blackOlive_1 {
   position: absolute;
   opacity: 1;
-  top: 350px;
-  left: 350px;
+  top: 68%;
+  left: 26%; 
 }
 #blackOlive_2 {
   position: absolute;
   opacity: 1;
-  top: 350px;
-  left: 550px;
+  top: 38%;
+  left: 55%;
 }
 #blackOlive_3 {
   position: absolute;
   opacity: 1;
-  top: 550px;
-  left: 400px;
+  top: 72%;
+  left: 62%;
 }
 #blackOlive_4 {
   position: absolute;
   opacity: 1;
-  top: 670px;
-  left: 650px;
+  top: 20%;
+  left: 34%;
 }
 #blackOlive_5 {
   position: absolute;
   opacity: 1;
-  top: 720px;
-  left: 320px;
+  top: 17%;
+  left: 43%;
 }
+
+/* Is it better to generate a random number based on the pizza range? */
+/* side limits (Left) 25%-65% */
+/* top limit 10-80 */
