--- a/pizza/src/css/animations/GreenPepperAnimation.css
+++ b/pizza/src/css/animations/GreenPepperAnimation.css
@@ -1,30 +1,34 @@
 #greenPepper_1 {
   position: absolute;
   opacity: 1;
-  top: 380px;
-  left: 350px;
+  top: 28%;
+  left: 33%;
 }
 #greenPepper_2 {
   position: absolute;
   opacity: 1;
-  top: 400px;
-  left: 550px;
+  top: 10%;
+  left: 65%;
 }
 #greenPepper_3 {
   position: absolute;
   opacity: 1;
-  top: 720px;
-  left: 400px;
+  top: 47%;
+  left: 44%;
 }
 #greenPepper_4 {
   position: absolute;
   opacity: 1;
-  top: 350px;
-  left: 650px;
+  top: 61%;
+  left: 52%;
 }
 #greenPepper_5 {
   position: absolute;
   opacity: 1;
-  top: 500px;
-  left: 320px;
+  top: 80%;
+  left: 29%;
 }
+
+/* Is it better to generate a random number based on the pizza range? */
+/* side limits (Left) 25%-65% */
+/* top limit 10-80 */
