--- a/pizza/src/css/animations/HamAnimation.css
+++ b/pizza/src/css/animations/HamAnimation.css
@@ -1,30 +1,34 @@
 #ham_1 {
   position: absolute;
   opacity: 1;
-  top: 350px;
-  left: 300px;
+  top: 50%;
+  left: 62%;
 }
 #ham_2 {
   position: absolute;
   opacity: 1;
-  top: 350px;
-  left: 500px;
+  top: 26%;
+  left: 44%;
 }
 #ham_3 {
   position: absolute;
   opacity: 1;
-  top: 550px;
-  left: 450px;
+  top: 59%;
+  left: 42%;
 }
 #ham_4 {
   position: absolute;
   opacity: 1;
-  top: 670px;
-  left: 600px;
+  top: 74%;
+  left: 58%;
 }
 #ham_5 {
   position: absolute;
   opacity: 1;
-  top: 720px;
-  left: 300px;
+  top: 16%;
+  left: 32%;
 }
+
+/* Is it better to generate a random number based on the pizza range? */
+/* side limits (Left) 25%-65% */
+/* top limit 10-80 */
