--- a/pizza/src/css/animations/MushroomAnimation.css
+++ b/pizza/src/css/animations/MushroomAnimation.css
@@ -1,30 +1,34 @@
 #mushroom_1 {
   position: absolute;
   opacity: 1;
-  top: 350px;
-  left: 350px;
+  top: 40%;
+  left: 25%;
 }
 #mushroom_2 {
   position: absolute;
   opacity: 1;
-  top: 350px;
-  left: 550px;
+  top: 40%;
+  left: 60%;
 }
 #mushroom_3 {
   position: absolute;
   opacity: 1;
-  top: 550px;
-  left: 400px;
+  top: 76%;
+  left: 62%;
 }
 #mushroom_4 {
   position: absolute;
   opacity: 1;
-  top: 670px;
-  left: 650px;
+  top: 27%;
+  left: 64%;
 }
 #mushroom_5 {
   position: absolute;
   opacity: 1;
-  top: 720px;
-  left: 320px;
+  top: 55%;
+  left: 33%;
 }
+
+/* Is it better to generate a random number based on the pizza range? */
+/* side limits (Left) 25%-65% */
+/* top limit 10-80 */
