--- a/pizza/src/css/animations/PepperoniAnimation.css
+++ b/pizza/src/css/animations/PepperoniAnimation.css
@@ -1,30 +1,34 @@
 #pepperoni_1 {
   position: absolute;
   opacity: 1;
-  top: 350px;
-  left: 350px;
+  top: 29%;
+  left: 40%;
 }
 #pepperoni_2 {
   position: absolute;
   opacity: 1;
-  top: 350px;
-  left: 550px;
+  top: 71%;
+  left: 54%;
 }
 #pepperoni_3 {
   position: absolute;
   opacity: 1;
-  top: 550px;
-  left: 400px;
+  top: 10%;
+  left: 38%;
 }
 #pepperoni_4 {
   position: absolute;
   opacity: 1;
-  top: 670px;
-  left: 650px;
+  top: 48%;
+  left: 27%;
 }
 #pepperoni_5 {
   position: absolute;
   opacity: 1;
-  top: 720px;
-  left: 320px;
+  top: 11%;
+  left: 52%;
 }
+
+/* Is it better to generate a random number based on the pizza range? */
+/* side limits (Left) 25%-65% */
+/* top limit 10-80 */
