--- a/pizza/src/css/animations/PineappleAnimation.css
+++ b/pizza/src/css/animations/PineappleAnimation.css
@@ -1,30 +1,34 @@
 #pineapple_1 {
   position: absolute;
   opacity: 1;
-  top: 350px;
-  left: 300px;
+  top: 60%;
+  left: 38%;
 }
 #pineapple_2 {
   position: absolute;
   opacity: 1;
-  top: 350px;
-  left: 500px;
+  top: 26%;
+  left: 55%;
 }
 #pineapple_3 {
   position: absolute;
   opacity: 1;
-  top: 550px;
-  left: 450px;
+  top: 19%;
+  left: 41%;
 }
 #pineapple_4 {
   position: absolute;
   opacity: 1;
-  top: 670px;
-  left: 600px;
+  top: 31%;
+  left: 27%;
 }
 #pineapple_5 {
   position: absolute;
   opacity: 1;
-  top: 720px;
-  left: 300px;
+  top: 42%;
+  left: 63%;
 }
+
+/* Is it better to generate a random number based on the pizza range? */
+/* side limits (Left) 25%-65% */
+/* top limit 10-80 */
