--- a/pizza/src/App.css
+++ b/pizza/src/App.css
@@ -24,3 +24,8 @@
 .sub_link:hover{
   text-decoration: underline;
 }
+.footer{
+  margin-top: 20px;
+  margin-bottom: 20px;
+  text-align: center;
+}
