--- a/pizza/src/css/animations/PepperoniAnimation.css
+++ b/pizza/src/css/animations/PepperoniAnimation.css
@@ -28,7 +28,6 @@
   top: 11%;
   left: 52%;
 }
-
-/* Is it better to generate a random number based on the pizza range? */
-/* side limits (Left) 25%-65% */
-/* top limit 10-80 */
+.pepperoni{
+  width: 8%;
+}
