--- a/pizza/src/css/PizzaForm.css
+++ b/pizza/src/css/PizzaForm.css
@@ -7,7 +7,9 @@
     margin-left: auto;
     margin-right: auto;
     margin-top: 20px;
-    margin-bottom: 50px;
+    margin-bottom: 40px;
+    height: 75%;
+    width: 75%
   }
   .toppingsToggle{
     /* border: 1px solid red; */
@@ -18,9 +20,11 @@
     /* border: 1px solid red; */
     display: inline;
     margin-left: 20px;
-    margin-right: 20px; 
+    margin-right: 20px;
     animation-name: toppingSelected;
     animation-duration: 4s;
+    height: 8%;
+    width: 8%
   }
   .buttonStyle{
     margin:0 auto; /* centers button */
