--- a/pizza/src/css/CreatedPizzaView.css
+++ b/pizza/src/css/CreatedPizzaView.css
@@ -8,15 +8,21 @@
     left: 50%;
     /* enables centering an absolute positioned div without knowing the width */
     transform: translateX(-50%);
+    background-color: white;
+    -moz-border-radius: 10px;
+    -webkit-border-radius: 10px;
+    margin: 0;
+    padding: 10px 20px 10px 20px;
 }
 .pizzaName{
-    background-color: white;
-    font-size: 25px;
+    /* background-color: white; */
+    font-size: 2em;
     color: #551a8b;
-    padding: 5px;
+    margin-bottom: 10px;
     font-weight: 900;
     text-align: center;
     font-family: 'Open Sans', sans-serif;
-    -moz-border-radius: 10px;
-    -webkit-border-radius: 10px;
+}
+.galleryButtonStyle>button{
+    margin: 0;
 }
