--- a/pizza/src/App.css
+++ b/pizza/src/App.css
@@ -6,7 +6,7 @@
 }
 .header{
   font-family: 'Nerko One', cursive;
-  font-size: 75px;
+  font-size: 5.5em;
   text-align: center;
   text-decoration: none;
 }
@@ -15,7 +15,7 @@
 }
 .sub_link{
   font-family: 'Open Sans', sans-serif;
-  font-size: 22px;
+  font-size: 1.6em;
   text-align: center;
   text-decoration: none;
   margin-top: 0;
@@ -28,4 +28,17 @@
   margin-top: 20px;
   margin-bottom: 20px;
   text-align: center;
+  background-color: #f5e0f1;
+}
+
+/* ------------------------------------------------ Media Query ---------- */
+/* All Iphones */
+
+@media(max-width: 415px){
+  .header{
+    font-size: 4.4em;
+  }
+  .sub_link{
+    font-size: 0.8em;
+  }
 }
