--- a/pizza/src/css/CreatedPizzaView.css
+++ b/pizza/src/css/CreatedPizzaView.css
@@ -1,30 +1,44 @@
-.container{
-    position: relative;
+.container {
+  position: relative;
 }
-.pizzaNameContainer{
-    position: absolute;
-    top: 65%;
-    z-index: 1;
-    left: 50%;
-    /* enables centering an absolute positioned div without knowing the width */
-    transform: translateX(-50%);
-    background-color: white;
-    -moz-border-radius: 10px;
-    -webkit-border-radius: 10px;
-    margin: 0;
-    padding: 10px 20px 10px 20px;
+.pizzaNameContainer {
+  position: absolute;
+  top: 65%;
+  z-index: 1;
+  left: 50%;
+  transform: translateX(
+    -50%
+  ); /* enables centering an absolute positioned div without knowing the width */
+  background-color: white;
+  -moz-border-radius: 10px;
+  -webkit-border-radius: 10px;
+  margin: 0;
+  padding: 10px 20px 10px 20px;
 }
-.pizzaName{
-    /* background-color: white; */
-    font-size: 2em;
+.pizzaName {
+  font-size: 2em;
+  color: #551a8b;
+  margin-bottom: 10px;
+  font-weight: 900;
+  text-align: center;
+  font-family: "Open Sans", sans-serif;
+}
+.galleryButtonStyle {
+  width: 100%;
+  margin: 0 auto;
+  text-align: center;
+}
+
+/* ------------------------------------------------ Media Query ---------- */
+/* All Iphones */
+
+@media (max-width: 415px) {
+  .pizzaName {
+    font-size: 0.8em;
     color: #551a8b;
     margin-bottom: 10px;
     font-weight: 900;
     text-align: center;
-    font-family: 'Open Sans', sans-serif;
-}
-.galleryButtonStyle{
-    width: 100%;
-    margin: 0 auto;
-    text-align: center;
+    font-family: "Open Sans", sans-serif;
+  }
 }
